--- a/frontend/src/pages/User/MotorDetail/MotorDetail.css
+++ b/frontend/src/pages/User/MotorDetail/MotorDetail.css
@@ -121,7 +121,7 @@
 
 .motor-detail-booking-from-to {
     display: flex;
-    flex-direction: row;
+    flex-direction: column    ;
     display: flex;
     border: 1px solid #e0e0e0;
     border-radius: 10px;
@@ -140,7 +140,7 @@
 }
 
 .motor-detail-booking-from {
-    border-right: 1px solid #e0e0e0;
+    border-bottom: 1px solid #e0e0e0;
 }
 
 .wrap-date-time {
