--- a/frontend/src/components/Admin/SideBar/Sidebar.css
+++ b/frontend/src/components/Admin/SideBar/Sidebar.css
@@ -20,8 +20,8 @@
     font-size: 100px;
 }
 
-.menu-item,
-.logout {
+.sidebar .menu-item,
+.sidebar .logout {
     margin: 0px 10px;
     gap: 10px;
     display: flex;
@@ -31,6 +31,8 @@
     border-radius: 10px;
     color: #cbcdd1;
     text-decoration: none ;
+    width: 200px;
+
     
 }
 .dashboard {
