--- a/frontend/src/pages/User/MotorDetail/MotorDetail.css
+++ b/frontend/src/pages/User/MotorDetail/MotorDetail.css
@@ -145,7 +145,8 @@
 
 .wrap-date-time {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    gap: 20px;
     font-weight: 700;
 }
 
