--- a/frontend/src/pages/User/Account/BikeManagement/BikeManagement.css
+++ b/frontend/src/pages/User/Account/BikeManagement/BikeManagement.css
@@ -12,6 +12,7 @@
     display: flex;
     gap: 10px;
     margin-bottom: 20px;
+    padding-bottom: 20px;
   }
   
   .tab {
@@ -36,19 +37,20 @@
   
   .filters input,
   .filters select {
+    margin-top: 20px;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
   }
   
-  .car-table {
+  .bike-table {
     width: 100%;
     border-collapse: collapse;
     background-color: white;
   }
   
-  .car-table th,
-  .car-table td {
+  .bike-table th,
+  .bike-table td {
     padding: 12px 10px;
     border: 1px solid #e0e0e0;
     text-align: left;
@@ -61,7 +63,7 @@
     align-items: center;
   }
   
-  .car-thumb {
+  .bike-thumb {
     width: 60px;
     height: 40px;
     object-fit: cover;
@@ -72,13 +74,33 @@
   .status-label {
     background-color: #e0f7ec;
     color: #2ecc71;
-    padding: 4px 10px;
+    padding: 6px 10px;
     border-radius: 4px;
     font-size: 13px;
     font-weight: 500;
     display: inline-block;
   }
   
+  .status-pending_approval {
+    background-color: #fff3cd;
+    color: #856404;
+    border: 1px solid #721c24;
+  }
+  
+  .status-available {
+    background-color: #e0f7ec;
+    color: #2ecc71;
+  }
+  
+  .status-rented {
+    background-color: #cce5ff;
+    color: #004085;
+  }
+  
+  .status-locked {
+    background-color: #f8d7da;
+    color: #721c24;
+  }
   .action-btn {
     background-color: #2ecc71;
     color: white;
@@ -93,3 +115,65 @@
     background-color: #27ae60;
   }
   
+  .repeat-btn {
+    display: flex;
+    align-items: center;
+    border: 1px solid #27ae60;
+    border-radius: 555px;
+    padding: 1px 6px;
+    background-color: #12a76b;
+    color: #fff;
+  }
+  .task-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background: #fff;
+    padding: 20px 0;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    /* max-width: 800px; */
+    margin: 0 auto;
+  }
+  
+  .task-item {
+    width: 25%; /* 100% / 4 = 25% cho mỗi ô */
+    text-align: center;
+    padding: 10px 0;
+    box-sizing: border-box;
+    border-right: 1px solid #eee;
+    margin-bottom: 10px;
+  }
+  
+  .task-item:nth-child(4),
+  .task-item:nth-child(8) {
+    border-right: none; /* bỏ border ở cuối hàng */
+  }
+  
+  .task-count {
+    font-size: 20px;
+    font-weight: bold;
+    color: #2673dd;
+    margin-bottom: 4px;
+    position: relative;
+  }
+  
+  .task-label {
+    font-size: 14px;
+    color: #333;
+  }
+  
+  .new-badge {
+    background: #ff5b00;
+    color: white;
+    font-size: 10px;
+    padding: 2px 4px;
+    border-radius: 10px;
+    position: absolute;
+    top: -8px;
+    right: -16px;
+  }
+  .list-rented-bike {
+    color: #333 !important;
+    padding: 10px
+  }
