--- a/frontend/src/pages/User/Account/BikeManagement/BikeManagement.css
+++ b/frontend/src/pages/User/Account/BikeManagement/BikeManagement.css
@@ -120,9 +120,10 @@
     align-items: center;
     border: 1px solid #27ae60;
     border-radius: 555px;
-    padding: 1px 6px;
+    padding: 1px 16px !important;
     background-color: #12a76b;
     color: #fff;
+    cursor: pointer;
   }
   .task-list {
     display: flex;
