--- a/frontend/src/pages/User/Owner/AddBike/Addbike.css
+++ b/frontend/src/pages/User/Owner/AddBike/Addbike.css
@@ -6,7 +6,7 @@
 .add-bike {
     display: flex;
     flex-direction: column;
-    margin: 20px 120px;
+    margin: 20px;
     padding: 20px;
     border: 4px solid #12b76a;
     border-radius: 10px;
