--- a/frontend/src/pages/User/MotorDetail/MotorDetail.css
+++ b/frontend/src/pages/User/MotorDetail/MotorDetail.css
@@ -200,3 +200,9 @@
     font-weight: 700;
     margin: 20px 0;
 }
+#address {
+    padding: 5px;
+    margin: 5px 0px;
+    border-radius: 5px;
+    width: 80%;
+}
