--- a/frontend/src/components/Auth/SignIn.css
+++ b/frontend/src/components/Auth/SignIn.css
@@ -1,6 +1,6 @@
 .fancy-container {
   width: 100vw;
-  height: 100vh;
+  height: 80vh;
   background: #f6f5f7;
   display: flex;
   align-items: center;
@@ -17,8 +17,13 @@
   overflow: hidden;
 }
 
+.login-btn:hover {
+  color:#15a562;
+  text-decoration: underline;
+}
+
 .left-panel {
-  background: #00c9a7;
+  background: #12b76a;
   flex: 1;
   color: white;
   padding: 50px;
@@ -51,7 +56,7 @@
 
 .left-panel button:hover {
   background: white;
-  color: #00c9a7;
+  color: #12b76a;
 }
 
 .left-panel img {
@@ -88,7 +93,7 @@
 }
 
 .right-panel button {
-  background: #00c9a7;
+  background: #12b76a;
   border: none;
   padding: 12px;
   border-radius: 25px;
@@ -98,7 +103,7 @@
 }
 
 .right-panel button:hover {
-  background: #009f87;
+  background: #1bb970;
 }
 
 .error {
@@ -121,7 +126,7 @@
 }
 
 .switch-text span {
-  color: #00c9a7;
+  color: #12b76a;
   cursor: pointer;
   margin-left: 5px;
 }
