--- a/frontend/src/pages/User/Owner/RegisterPage/RegisterPage.css
+++ b/frontend/src/pages/User/Owner/RegisterPage/RegisterPage.css
@@ -5,6 +5,11 @@
     font-size: 1rem;
 }
 
+.register-page input {
+    padding: 6px 8px;
+    margin-bottom: 6px;
+    border-radius: 5px;
+}
 .register-page-img img{
     width: 100%;
     height: 100px;
@@ -47,10 +52,6 @@
     box-sizing: border-box;
     width: 100%;
     margin-top: 10px;
-}
-
-.avatar {
-    
 }
 
 .rp-about {
