--- a/frontend/src/pages/User/Find/Search.css
+++ b/frontend/src/pages/User/Find/Search.css
@@ -5,8 +5,9 @@
 }
 
 .search-bar {
-    min-height: 110px;
-    background-color: #fff;
+    margin: auto;
+    padding: 20px;
+    border-bottom: 2px solid #ddd;
 }
 
 .result {
