--- a/frontend/src/pages/User/Account/BookingPage/BookingPage.css
+++ b/frontend/src/pages/User/Account/BookingPage/BookingPage.css
@@ -1,8 +1,8 @@
 /* TableXeDaDat.css */
 
 .table-container {
-    max-width: 1200px;
-    margin: 0 auto;
+    width: 100%;
+    /* margin: 0 auto; */
     padding: 24px;
   }
   
@@ -95,4 +95,12 @@
   .review-box {
     background-color: #fff;
     padding: 5px
+  }
+
+  .action-button {
+    text-decoration: none;
+    color: #fff;
+    background-color: #12b76a;
+    padding: 6px 8px;
+    border-radius: 5px;
   }
