--- a/frontend/src/pages/Admin/Bike/BikeManagement.css
+++ b/frontend/src/pages/Admin/Bike/BikeManagement.css
@@ -3,6 +3,7 @@
     padding: 20px;
     background-color: #f9f9f9;
     border-radius: 8px;
+    width: 90%;
   }
   
   .bike-management-title {
@@ -57,10 +58,10 @@
   }
   
   .bike-table {
-    width: 95%;
+    width: 100%;
     border-collapse: collapse;
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: bi8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin: 20px;
   }
