--- a/frontend/src/pages/User/Account/BookingPage/BookingPage.css
+++ b/frontend/src/pages/User/Account/BookingPage/BookingPage.css
@@ -122,3 +122,45 @@
 .motor-img:hover {
     transform: translateY(-5px);
 }
+
+.status {
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-weight: 500;
+  display: inline-block;
+}
+
+.status.completed {
+  background-color: #d1fae5; /* light green */
+  color: #065f46;            /* dark green */
+}
+
+.status.pending {
+  background-color: #fee2e2; /* light red */
+  color: #991b1b;            /* dark red */
+}
+
+.status.confirmed {
+  background-color: #bfdbfe; /* light blue */
+  color: #1e3a8a;            /* dark blue */
+}
+
+.rental-time {
+  line-height: 1.5;
+  font-size: 14px;
+  color: #333;
+}
+
+.rental-time strong {
+  color: #0f766e; /* xanh đậm */
+  margin-right: 4px;
+}
+
+.review-btn {
+  padding: 4px 10px;
+  margin-left: 5px;
+  border-radius: 3px;
+  background-color: #1877F2;
+  border: 2px solid #1877f2;
+  color: #fff;
+}
