--- a/frontend/src/pages/User/Account/RentalDetail/RentalDetail.css
+++ b/frontend/src/pages/User/Account/RentalDetail/RentalDetail.css
@@ -1,6 +1,6 @@
 .rental-detail {
-  max-width: 700px;
-  margin: 40px auto;
+  width: 90%;
+  margin: 0px auto;
   padding: 20px;
   border: 2px solid #e0e0e0;
   border-radius: 12px;
