--- a/frontend/src/pages/Admin/User/Account/BookingPage/BookingPage.css
+++ b/frontend/src/pages/Admin/User/Account/BookingPage/BookingPage.css
@@ -96,3 +96,14 @@
     background-color: #fff;
     padding: 5px
   }
+
+  .rental-time {
+  line-height: 1.5;
+  font-size: 14px;
+  color: #333;
+}
+
+.rental-time strong {
+  color: #0f766e; /* xanh đậm */
+  margin-right: 4px;
+}
