--- a/frontend/src/pages/Admin/User/Account/BookingPage/BookingPage.css
+++ b/frontend/src/pages/Admin/User/Account/BookingPage/BookingPage.css
@@ -90,6 +90,8 @@
     color: #333;
     font-size: 2rem;
     margin-bottom: 2rem;
+    border-radius: 5px;
+    border: 1px solid #f9f9f9;
   }
 
   .review-box {
