--- a/frontend/src/pages/User/Account/AccountPage/Account.css
+++ b/frontend/src/pages/User/Account/AccountPage/Account.css
@@ -22,15 +22,10 @@
   }
   
   .avatar-account {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: #d81b60;
-    color: white;
+    color: #12b76a;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 2rem;
     font-weight: bold;
     margin-right: 15px;
   }
