--- a/frontend/src/pages/Admin/User/Account/BikeManagement/BikeManagement.css
+++ b/frontend/src/pages/Admin/User/Account/BikeManagement/BikeManagement.css
@@ -178,3 +178,10 @@
     color: #333 !important;
     padding: 10px
   }
+
+  .action-hide {
+    margin-left: 5px;
+    background-color: #856404;
+  }
+
+
