--- a/frontend/src/pages/Admin/Report/Report.css
+++ b/frontend/src/pages/Admin/Report/Report.css
@@ -21,6 +21,14 @@
     font-size: 16px;
 }
 
+.rental-table {
+  width: 90%;
+  margin: auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px; 
+  color: #333;
+}
 .revenue-total {
     font-weight: bold;
     color: #d32f2f;
