--- a/frontend/src/pages/User/Account/BikeManagement/BikeManagement.css
+++ b/frontend/src/pages/User/Account/BikeManagement/BikeManagement.css
@@ -184,3 +184,12 @@
     border: 2px solid #2673dd;
 
   }
+
+    .action-show {
+    margin-left: 5px;
+    background-color: #12a76b;
+    color: #fff;
+    border: 1px solid #27ae60;
+    padding: 5px;
+    border-radius: 5px;
+  }
